--- a/index.html
+++ b/index.html
@@ -1,49 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sahil Patil | Aerospace @ IITB</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: #f9f9f9;
-            color: #333;
-        }
-        header {
-            background: #004080;
-            color: white;
-            padding: 2rem 1rem;
-            text-align: center;
-        }
-        h1, h2 {
-            margin: 0.5rem 0;
-        }
-        section {
-            padding: 2rem 1rem;
-            max-width: 800px;
-            margin: auto;
-        }
-        .category {
-            margin-bottom: 2rem;
-        }
-        ul {
-            padding-left: 1.2rem;
-        }
-        a {
-            color: #004080;
-            text-decoration: none;
-        }
-        footer {
-            text-align: center;
-            padding: 1rem;
-            background: #eee;
-            margin-top: 3rem;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <header>
@@ -97,10 +59,18 @@
                 <li><a href="https://www.instagram.com/sahil.rp10">Instagram</a></li>
             </ul>
         </div>
+
+        <div class="category">
+            <h2>📄 Explore More</h2>
+            <ul>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="publications.html">Publications</a></li>
+            </ul>
+        </div>
     </section>
 
     <footer>
-        &copy; 2025 Sahil Patil | sahil_rp10.github.io
+        &copy; 2025 Sahil Patil | sahil-rp10.github.io
     </footer>
 </body>
 </html>
