--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sahil Patil | Aerospace @ IITB</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+<!--     <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
 </head>
 <body>
     <header>
@@ -67,6 +67,7 @@
                 <li><a href="publications.html">Publications</a></li>
             </ul>
         </div>
+
     </section>
 
     <footer>
