--- a/publications.html
+++ b/publications.html
@@ -11,9 +11,7 @@
     </header>
     <section>
         <ul>
-            <li><strong>Motion Magnification for CV</strong> – IITB Summer of Code Project (2024)</li>
-            <li><strong>Hybrid Propulsion for CubeSats</strong> – IITB Summer Research (2024)</li>
-            <li><strong>3D Optical Cloaking: Theory</strong> – Transformation Optics Seminar (2024)</li>
+            <li><strong>Soon... :) </strong> – ARF, VFS (2025)</li>
         </ul>
         <p><a href="index.html">← Back to Home</a></p>
     </section>
