--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 <body>
     <header>
         <h1>🚀 Hey there! I'm Sahil Patil</h1>
-        <p>Aerospace Engineering @ IIT Bombay | Systems & Control Minor</p>
-        <p>Robotics Innovator 🦾 | Space Enthusiast ✈️</p>
+        <p>🎓 3rd year Aerospace Engineering @ IIT Bombay | Systems & Control Minor</p>
+        <p>👨🏻‍💻 Robotics & Space Enthusiast ✈️</p>
     </header>
 
     <section>
         <div class="category">
-            <h2>🔭 Currently Soaring Through</h2>
+            <h2>🔭 Currently Doing: </h2>
             <ul>
-                <li>Quadcopter Controls and Simulations at IITB ExoFly Team</li>
-                <li>Helicopter Analysis and Designing Software for CSIR-NAL</li>
-                <li>JetAuto Robot applications</li>
-                <li>Autonomous Humanoid Robot Development at IITB THP Team</li>
+                <li>🛰 Quadcopter Controls and Simulations Engineer at IITB ExoFly Team </li>
+                <li>🚁 Developing a Helicopter Analysis and Designing Software </li>
+                <li>📜 Supervised Learning Project (SLP) under Dr. Rohit Nanavati professor </li>
+<!--                 <li>JetAuto Robot applications</li> -->
+<!--                 <li>Autonomous Humanoid Robot Development at IITB THP Team</li> -->
             </ul>
         </div>
 
@@ -38,7 +39,14 @@
         </div>
 
         <div class="category">
-            <h2>🛠️ Tech Arsenal</h2>
+            <h2>🗂️🛠️🤖 My Projects </h2>
+            <ul>
+                <li><a href="projects.html">Projects</a></li>
+            </ul>
+        </div>
+
+        <div class="category">
+            <h2>🛠️ My Tech Arsenal</h2>
             <h3>Programming & Robotics</h3>
             <ul>
                 <li>Python, C++</li>
@@ -52,18 +60,17 @@
         </div>
 
         <div class="category">
-            <h2>🌐 Connect with Me</h2>
+            <h2>🌐 Holla! Connect with Me</h2>
             <ul>
-                <li><a href="https://www.linkedin.com/in/sahil-rp10">LinkedIn</a></li>
-                <li><a href="mailto:sahil.rp10@gmail.com">Email</a></li>
-                <li><a href="https://www.instagram.com/sahil.rp10">Instagram</a></li>
+                <li><a href="https://www.linkedin.com/in/sahil-patil-ugotthelink">LinkedIn</a></li>
+                <li><a href="mailto:sahilpatil1042005@gmail.com">Email</a></li>
+                <li><a href="https://www.instagram.com/sahilp_iitb">Instagram</a></li>
             </ul>
         </div>
 
         <div class="category">
-            <h2>📄 Explore More</h2>
+            <h2>📄 Few of my publications </h2>
             <ul>
-                <li><a href="projects.html">Projects</a></li>
                 <li><a href="publications.html">Publications</a></li>
             </ul>
         </div>
@@ -71,7 +78,7 @@
     </section>
 
     <footer>
-        &copy; 2025 Sahil Patil | sahil-rp10.github.io
+        &copy; 2025 | Made by Sahil Patil & chatGPT ;)
     </footer>
 </body>
 </html>
