--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>🚀 Hey there! I'm Sahil Patil</h1>
+        <h1>🚀 Hey there! 
+            I'm Sahil R Patil</h1>
         <p>🎓 3rd year Aerospace Engineering @ IIT Bombay | Systems & Control Minor</p>
         <p>👨🏻‍💻 Robotics & Space Enthusiast ✈️</p>
     </header>
