--- a/index.html
+++ b/index.html
@@ -47,6 +47,43 @@
         </div>
 
         <div class="category">
+            <h2>📚 Courses Taken till now</h2>
+            <div class="course-bubbles">
+                <div class="course-bubble">Supervised Learning</div>
+                <div class="course-bubble">High Speed Aerodynamics</div>
+                <div class="course-bubble">Flight Mechanics of Aircrafts</div>
+                <div class="course-bubble">Aero Propulsion</div>
+                <div class="course-bubble">Rotary Wing Aerodynamics</div>
+                <div class="course-bubble">Machine Learning & Data Mining</div>
+                <div class="course-bubble">Linear & Nonlinear Systems</div>
+                <div class="course-bubble">Control Systems Lab</div>
+                <div class="course-bubble">Low Speed Aerodynamics</div>
+                <div class="course-bubble">AI and Data Science</div>
+                <div class="course-bubble">Guidance of Aerospace Vehicles</div>
+                <div class="course-bubble">Signals and Feedback Systems</div>
+                <div class="course-bubble">Control of Nonlinear Systems</div>
+                <div class="course-bubble">Thermodynamics & Propulsion</div>
+                <div class="course-bubble">Solid Mechanics</div>
+                <div class="course-bubble">Navigation & Guidance</div>
+                <div class="course-bubble">Analytical & Geometric Dynamics</div>
+                <div class="course-bubble">Mathematical Structures for Control</div>
+                <div class="course-bubble">Computer Programming</div>
+                <div class="course-bubble">Intro to Aerospace Engineering</div>
+                <div class="course-bubble">Environmental Studies</div>
+                <div class="course-bubble">Linear Algebra & Differential Eq.</div>
+                <div class="course-bubble">Calculus</div>
+                <div class="course-bubble">Intro to Psychology</div>
+            </div>
+        </div>
+
+        <div class="category">
+            <h2>📄 Few of my publications </h2>
+            <ul>
+                <li><a href="publications.html">Publications</a></li>
+            </ul>
+        </div>
+
+<!--         <div class="category">
             <h2>🛠️ My Tech Arsenal</h2>
             <h3>Programming & Robotics</h3>
             <ul>
@@ -58,7 +95,7 @@
                 <li>Gazebo, MATLAB, Simulink</li>
                 <li>OpenVSP, Fusion360, ANSYS</li>
             </ul>
-        </div>
+        </div> -->
 
         <div class="category">
             <h2>🌐 Holla! Connect with Me</h2>
@@ -66,13 +103,6 @@
                 <li><a href="https://www.linkedin.com/in/sahil-patil-ugotthelink">LinkedIn</a></li>
                 <li><a href="mailto:sahilpatil1042005@gmail.com">Email</a></li>
                 <li><a href="https://www.instagram.com/sahilp_iitb">Instagram</a></li>
-            </ul>
-        </div>
-
-        <div class="category">
-            <h2>📄 Few of my publications </h2>
-            <ul>
-                <li><a href="publications.html">Publications</a></li>
             </ul>
         </div>
 
