--- a/index.html
+++ b/index.html
@@ -47,33 +47,10 @@
         </div>
 
         <div class="category">
-            <h2>📚 Courses Taken till now</h2>
-            <div class="course-bubbles">
-                <div class="course-bubble">Supervised Learning</div>
-                <div class="course-bubble">High Speed Aerodynamics</div>
-                <div class="course-bubble">Flight Mechanics of Aircrafts</div>
-                <div class="course-bubble">Aero Propulsion</div>
-                <div class="course-bubble">Rotary Wing Aerodynamics</div>
-                <div class="course-bubble">Machine Learning & Data Mining</div>
-                <div class="course-bubble">Linear & Nonlinear Systems</div>
-                <div class="course-bubble">Control Systems Lab</div>
-                <div class="course-bubble">Low Speed Aerodynamics</div>
-                <div class="course-bubble">AI and Data Science</div>
-                <div class="course-bubble">Guidance of Aerospace Vehicles</div>
-                <div class="course-bubble">Signals and Feedback Systems</div>
-                <div class="course-bubble">Control of Nonlinear Systems</div>
-                <div class="course-bubble">Thermodynamics & Propulsion</div>
-                <div class="course-bubble">Solid Mechanics</div>
-                <div class="course-bubble">Navigation & Guidance</div>
-                <div class="course-bubble">Analytical & Geometric Dynamics</div>
-                <div class="course-bubble">Mathematical Structures for Control</div>
-                <div class="course-bubble">Computer Programming</div>
-                <div class="course-bubble">Intro to Aerospace Engineering</div>
-                <div class="course-bubble">Environmental Studies</div>
-                <div class="course-bubble">Linear Algebra & Differential Eq.</div>
-                <div class="course-bubble">Calculus</div>
-                <div class="course-bubble">Intro to Psychology</div>
-            </div>
+            <h2>📖 Courses Taken till now</h2>
+            <ul>
+                <li><a href="courses.html">View All Courses by Semester</a></li>
+            </ul>
         </div>
 
         <div class="category">
