--- a/courses.html
+++ b/courses.html
@@ -13,45 +13,86 @@
   </header>
 
   <section>
-    <!-- Repeat this block for each semester -->
+    <!-- 2025-26 Autumn -->
     <div class="semester">
-      <h2>Semester 1</h2>
+      <h2>Year/Semester: 2025-26/Autumn</h2>
       <div class="course-grid">
-        <div class="course-card">
-          <span class="code">AE101</span>
-          <span class="name">Introduction to Aerospace Engineering</span>
-        </div>
-        <div class="course-card">
-          <span class="code">MA102</span>
-          <span class="name">Engineering Mathematics I</span>
-        </div>
-        <div class="course-card">
-          <span class="code">PH103</span>
-          <span class="name">Physics for Engineers</span>
-        </div>
-        <!-- add more cards as needed -->
+        <div class="course-card"><span class="code">AE 219</span><span class="name">Supervised Learning</span></div>
+        <div class="course-card"><span class="code">AE 339</span><span class="name">High Speed Aerodynamics</span></div>
+        <div class="course-card"><span class="code">AE 341</span><span class="name">Flight Mechanics of Aircrafts and Spacecrafts</span></div>
+        <div class="course-card"><span class="code">AE 343</span><span class="name">Aerodynamics Laboratory</span></div>
+        <div class="course-card"><span class="code">AE 344</span><span class="name">Aero Propulsion</span></div>
+        <div class="course-card"><span class="code">AE 345</span><span class="name">Aircraft Propulsion Laboratory</span></div>
+        <div class="course-card"><span class="code">AE 667</span><span class="name">Rotary Wing Aerodynamics</span></div>
+        <div class="course-card"><span class="code">ENT617</span><span class="name">Tech-Opportunities Identification</span></div>
+        <div class="course-card"><span class="code">ME 781</span><span class="name">Statistical Machine Learning and Data Mining</span></div>
+        <div class="course-card"><span class="code">SC 301</span><span class="name">Linear and Nonlinear Systems</span></div>
       </div>
     </div>
 
+    <!-- 2024-25 Spring -->
     <div class="semester">
-      <h2>Semester 2</h2>
+      <h2>Year/Semester: 2024-25/Spring</h2>
       <div class="course-grid">
-        <div class="course-card">
-          <span class="code">AE201</span>
-          <span class="name">Fluid Mechanics</span>
-        </div>
-        <div class="course-card">
-          <span class="code">AE202</span>
-          <span class="name">Dynamics</span>
-        </div>
-        <div class="course-card">
-          <span class="code">MA203</span>
-          <span class="name">Engineering Mathematics II</span>
-        </div>
+        <div class="course-card"><span class="code">AE 233</span><span class="name">Control Systems Laboratory</span></div>
+        <div class="course-card"><span class="code">AE 238</span><span class="name">Aerospace Structural Mechanics</span></div>
+        <div class="course-card"><span class="code">AE 244</span><span class="name">Low Speed Aerodynamics</span></div>
+        <div class="course-card"><span class="code">AE 246</span><span class="name">Aircraft Structures Laboratory</span></div>
+        <div class="course-card"><span class="code">AE 248</span><span class="name">AI and Data Science</span></div>
+        <div class="course-card"><span class="code">AE 686</span><span class="name">Guidance of Aerospace Vehicles</span></div>
+        <div class="course-card"><span class="code">DE 250</span><span class="name">Design Thinking for Innovation</span></div>
+        <div class="course-card"><span class="code">PH 111</span><span class="name">Introduction to Classical Physics</span></div>
+        <div class="course-card"><span class="code">SC 202</span><span class="name">Signals and Feedback Systems</span></div>
+        <div class="course-card"><span class="code">SC 602</span><span class="name">Control of Nonlinear Dynamical Systems</span></div>
       </div>
     </div>
 
-    <!-- continue for subsequent semesters -->
+    <!-- 2024-25 Autumn -->
+    <div class="semester">
+      <h2>Year/Semester: 2024-25/Autumn</h2>
+      <div class="course-grid">
+        <div class="course-card"><span class="code">AE 223</span><span class="name">Thermodynamics and Propulsion</span></div>
+        <div class="course-card"><span class="code">AE 227</span><span class="name">Solid Mechanics</span></div>
+        <div class="course-card"><span class="code">AE 229</span><span class="name">Intro to Aero and Propulsion Lab</span></div>
+        <div class="course-card"><span class="code">AE 231</span><span class="name">Intro to Aerospace Structures and Control Lab</span></div>
+        <div class="course-card"><span class="code">AE 308</span><span class="name">Control Theory</span></div>
+        <div class="course-card"><span class="code">AE 410</span><span class="name">Navigation and Guidance</span></div>
+        <div class="course-card"><span class="code">EC 101</span><span class="name">Economics</span></div>
+        <div class="course-card"><span class="code">ES 250</span><span class="name">Environmental Studies</span></div>
+        <div class="course-card"><span class="code">HS 250</span><span class="name">Environmental Studies (Continued)</span></div>
+        <div class="course-card"><span class="code">SC 618</span><span class="name">Analytical and Geometric Dynamics</span></div>
+        <div class="course-card"><span class="code">SC 639</span><span class="name">Mathematical Structures for Control</span></div>
+      </div>
+    </div>
+
+    <!-- 2023-24 Spring -->
+    <div class="semester">
+      <h2>Year/Semester: 2023-24/Spring</h2>
+      <div class="course-grid">
+        <div class="course-card"><span class="code">AE 152</span><span class="name">Intro to Aerospace Engineering</span></div>
+        <div class="course-card"><span class="code">CS 101</span><span class="name">Computer Programming and Utilization</span></div>
+        <div class="course-card"><span class="code">ENT101</span><span class="name">Intro to Innovation & Entrepreneurship</span></div>
+        <div class="course-card"><span class="code">HS 110</span><span class="name">Intro to Psychology</span></div>
+        <div class="course-card"><span class="code">MA 110</span><span class="name">Linear Algebra and Differential Equations</span></div>
+        <div class="course-card"><span class="code">NOCS02</span><span class="name">NCC/NSS/NSO</span></div>
+        <div class="course-card"><span class="code">PH 117</span><span class="name">Physics Lab</span></div>
+        <div class="course-card"><span class="code">TA 101</span><span class="name">Teaching Assistant Skill Enhancement & Training</span></div>
+      </div>
+    </div>
+
+    <!-- 2023-24 Autumn -->
+    <div class="semester">
+      <h2>Year/Semester: 2023-24/Autumn</h2>
+      <div class="course-grid">
+        <div class="course-card"><span class="code">AE 103</span><span class="name">A Historical Perspective of Aerospace Engineering</span></div>
+        <div class="course-card"><span class="code">BB 101</span><span class="name">Biology</span></div>
+        <div class="course-card"><span class="code">CH 117</span><span class="name">Chemistry Lab</span></div>
+        <div class="course-card"><span class="code">GC 101</span><span class="name">Gender in the Workplace</span></div>
+        <div class="course-card"><span class="code">MA 105</span><span class="name">Calculus</span></div>
+        <div class="course-card"><span class="code">MS 101</span><span class="name">Makerspace</span></div>
+        <div class="course-card"><span class="code">NOCS01</span><span class="name">NCC/NSS/NSO</span></div>
+      </div>
+    </div>
   </section>
 
   <footer>
